# sarvam-tts-dataset

./: .env.template  .gitignore  BUILD_GUIDE.md  README.md  config.yaml  filter_segments.py  main.py  pyproject.toml  quality_check_run.py  run_full_pipeline.py  segment_save.py  transcribe_run.py
data/: manifest_backup.json  sources_en.yaml  sources_hi.yaml
prompts/: emotion_classification.txt
scripts/: dataset_status.py  run_audit.py  run_pipeline.ps1  run_pipeline.sh  select_asr_subset.py
src/: config.py  diarizer.py  downloader.py  emotion_tagger.py  manifest.py  pipeline.py  preprocessor.py  segmenter.py  transcriber.py
the pipeline/notebooks/: quality_analysis.ipynb
the pipeline/report/: pipeline_report.md
the pipeline/scripts/: run_pipeline.ps1  run_pipeline.sh
the pipeline/src/: auditor.py  config.py  dataset_builder.py  emotion_tagger.py  manifest.py  pipeline.py  quality_checker.py  sarvam_client.py  upload_hf.py
the pipeline/tests/: test_downloader.py  test_quality_checker.py  test_transcriber.py
the pipeline_report/: pipeline_report.md
