[project]
name = "sarvam-tts-dataset"
version = "0.1.0"
description = "60-minute Indian TTS training dataset pipeline (Indian English + Hindi) built on Sarvam APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.19.0",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "pydub>=0.25.1",
    "pytest>=8.0.0",
    "pyyaml>=6.0.0",
    "rich>=15.0.0",
    "sarvamai>=0.1.28",
    "silero-vad>=6.0.0",
    "soundfile>=0.14.0",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "yt-dlp>=2026.6.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
